kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    name: code-server
    env: shared
---
apiVersion: v1
kind: Namespace
metadata:
  name: agents
  labels:
    name: agents
    env: shared
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
    env: shared
